--- a/frontend/problem.html
+++ b/frontend/problem.html
@@ -3,104 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problem - LeetCode Clone</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/material-darker.min.css">
+    <title>CodeMaster - Problem Solving Dashboard</title>
+    <link rel="stylesheet" href="css/problem.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/theme/one-dark.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar">
+    <!-- Theme Toggle -->
+    <div class="theme-toggle" id="themeToggle">
+        <i class="fas fa-sun"></i>
+    </div>
+
+    <!-- Navigation Header -->
+    <header class="navbar">
         <div class="nav-container">
-            <div class="nav-left">
-                <a href="index.html" class="logo">
+            <div class="nav-brand">
+                <div class="logo">
                     <i class="fas fa-code"></i>
-                    <span>LeetClone</span>
-                </a>
-                <button class="back-btn" onclick="history.back()">
-                    <i class="fas fa-arrow-left"></i>
-                    Back to Problems
-                </button>
+                    <span>CodeMaster</span>
+                </div>
+                <div class="nav-breadcrumb">
+                    <span class="breadcrumb-item">Problems</span>
+                    <i class="fas fa-chevron-right"></i>
+                    <span class="breadcrumb-item active" id="problemBreadcrumb">Two Sum</span>
+                </div>
             </div>
-            <div class="nav-right">
-                <button class="btn-premium">Premium</button>
-                <div class="user-menu">
-                    <img src="https://via.placeholder.com/32" alt="User" class="user-avatar">
+            <div class="nav-actions">
+                <button class="nav-btn" id="fullscreenBtn">
+                    <i class="fas fa-expand"></i>
+                </button>
+                <button class="nav-btn premium">
+                    <i class="fas fa-crown"></i>
+                    Premium
+                </button>
+                <div class="user-profile">
+                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=40&h=40&fit=crop&crop=face" alt="User">
+                    <span>John Doe</span>
                 </div>
             </div>
         </div>
-    </nav>
+    </header>
 
-    <!-- Problem Content -->
-    <div class="problem-container">
-        <!-- Left Panel - Problem Description -->
-        <div class="problem-panel">
+    <!-- Main Dashboard -->
+    <main class="dashboard">
+        <!-- Problem Panel -->
+        <section class="problem-section">
             <div class="problem-header">
-                <div class="problem-title-section">
-                    <h1 class="problem-title" id="problemTitle">Loading...</h1>
+                <div class="problem-title-group">
+                    <h1 class="problem-title" id="problemTitle">Two Sum</h1>
                     <div class="problem-meta">
-                        <span class="difficulty-badge" id="difficultyBadge">Medium</span>
+                        <span class="difficulty-badge easy" id="difficultyBadge">Easy</span>
                         <div class="problem-stats">
-                            <span class="stat">
-                                <i class="fas fa-thumbs-up"></i>
-                                <span id="likes">0</span>
-                            </span>
-                            <span class="stat">
-                                <i class="fas fa-thumbs-down"></i>
-                                <span id="dislikes">0</span>
-                            </span>
+                            <button class="stat-btn" id="likeBtn">
+                                <i class="far fa-thumbs-up"></i>
+                                <span id="likes">1,234</span>
+                            </button>
+                            <button class="stat-btn" id="dislikeBtn">
+                                <i class="far fa-thumbs-down"></i>
+                                <span id="dislikes">56</span>
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="problem-actions">
-                    <button class="action-btn" id="favoriteBtn">
-                        <i class="far fa-heart"></i>
+                    <button class="action-btn" id="favoriteBtn" title="Add to favorites">
+                        <i class="far fa-bookmark"></i>
                     </button>
-                    <button class="action-btn" id="shareBtn">
-                        <i class="fas fa-share"></i>
+                    <button class="action-btn" id="shareBtn" title="Share problem">
+                        <i class="fas fa-share-alt"></i>
+                    </button>
+                    <button class="action-btn" id="notesBtn" title="Add notes">
+                        <i class="fas fa-sticky-note"></i>
                     </button>
                 </div>
             </div>
 
             <div class="problem-content">
-                <div class="problem-description" id="problemDescription">
-                    <!-- Problem description will be loaded here -->
+                <div class="content-tabs">
+                    <button class="tab-btn active" data-tab="description">Description</button>
+                    <button class="tab-btn" data-tab="editorial">Editorial</button>
+                    <button class="tab-btn" data-tab="solutions">Solutions</button>
+                    <button class="tab-btn" data-tab="discuss">Discuss</button>
                 </div>
 
-                <div class="problem-examples" id="problemExamples">
-                    <!-- Examples will be loaded here -->
+                <div class="tab-content active" id="description">
+                    <div class="problem-description" id="problemDescription">
+                        <!-- Content will be loaded here -->
+                    </div>
+                    <div class="problem-examples" id="problemExamples">
+                        <!-- Examples will be loaded here -->
+                    </div>
+                    <div class="problem-constraints" id="problemConstraints">
+                        <!-- Constraints will be loaded here -->
+                    </div>
+                    <div class="problem-tags" id="problemTags">
+                        <!-- Tags will be loaded here -->
+                    </div>
                 </div>
 
-                <div class="problem-constraints" id="problemConstraints">
-                    <!-- Constraints will be loaded here -->
+                <div class="tab-content" id="editorial">
+                    <div class="editorial-content">
+                        <h3>Editorial Coming Soon</h3>
+                        <p>Detailed explanation and optimal solution approaches will be available here.</p>
+                    </div>
                 </div>
 
-                <div class="problem-tags" id="problemTags">
-                    <!-- Tags will be loaded here -->
+                <div class="tab-content" id="solutions">
+                    <div class="solutions-content">
+                        <h3>Community Solutions</h3>
+                        <p>Browse solutions submitted by the community.</p>
+                    </div>
+                </div>
+
+                <div class="tab-content" id="discuss">
+                    <div class="discuss-content">
+                        <h3>Discussion Forum</h3>
+                        <p>Join the discussion about this problem.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <!-- Right Panel - Code Editor -->
-        <div class="editor-panel">
+        <!-- Code Editor Panel -->
+        <section class="editor-section">
             <div class="editor-header">
-                <div class="language-selector">
-                    <select id="languageSelect" class="language-select">
-                        <option value="javascript">JavaScript</option>
-                        <option value="python">Python</option>
-                        <option value="java">Java</option>
-                        <option value="cpp">C++</option>
-                        <option value="c">C</option>
-                    </select>
+                <div class="editor-controls">
+                    <div class="language-selector">
+                        <select id="languageSelect" class="modern-select">
+                            <option value="javascript">JavaScript</option>
+                            <option value="python">Python</option>
+                            <option value="java">Java</option>
+                            <option value="cpp">C++</option>
+                            <option value="c">C</option>
+                        </select>
+                    </div>
+                    <div class="editor-settings">
+                        <button class="setting-btn" id="fontSizeBtn" title="Font size">
+                            <i class="fas fa-text-height"></i>
+                        </button>
+                        <button class="setting-btn" id="wrapBtn" title="Word wrap">
+                            <i class="fas fa-align-left"></i>
+                        </button>
+                    </div>
                 </div>
                 <div class="editor-actions">
-                    <button class="editor-btn" id="resetBtn">
+                    <button class="editor-btn secondary" id="resetBtn">
                         <i class="fas fa-undo"></i>
                         Reset
                     </button>
-                    <button class="editor-btn" id="runBtn">
+                    <button class="editor-btn secondary" id="runBtn">
                         <i class="fas fa-play"></i>
                         Run
                     </button>
@@ -112,26 +165,36 @@
             </div>
 
             <div class="editor-container">
-                <textarea id="codeEditor" class="code-editor"></textarea>
+                <div class="editor-wrapper">
+                    <textarea id="codeEditor"></textarea>
+                </div>
             </div>
 
-            <div class="test-cases-section">
+            <!-- Test Cases Section -->
+            <div class="test-section">
                 <div class="section-header">
                     <h3>Test Cases</h3>
-                    <button class="add-test-btn" id="addTestBtn">
-                        <i class="fas fa-plus"></i>
-                        Add Test Case
-                    </button>
+                    <div class="test-controls">
+                        <button class="test-btn" id="addTestBtn">
+                            <i class="fas fa-plus"></i>
+                            Add Test
+                        </button>
+                        <button class="test-btn" id="runTestsBtn">
+                            <i class="fas fa-play-circle"></i>
+                            Run All
+                        </button>
+                    </div>
                 </div>
                 <div class="test-cases" id="testCases">
                     <!-- Test cases will be loaded here -->
                 </div>
             </div>
 
-            <div class="output-section" id="outputSection" style="display: none;">
+            <!-- Output Section -->
+            <div class="output-section" id="outputSection">
                 <div class="section-header">
                     <h3>Output</h3>
-                    <button class="close-output" id="closeOutput">
+                    <button class="close-btn" id="closeOutput">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
@@ -139,15 +202,17 @@
                     <!-- Output will be displayed here -->
                 </div>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
 
     <!-- Submission Result Modal -->
-    <div class="modal" id="resultModal">
-        <div class="modal-content">
+    <div class="modal-overlay" id="resultModal">
+        <div class="modal">
             <div class="modal-header">
                 <h2 id="resultTitle">Submission Result</h2>
-                <button class="close-btn" id="closeResultModal">&times;</button>
+                <button class="modal-close" id="closeResultModal">
+                    <i class="fas fa-times"></i>
+                </button>
             </div>
             <div class="modal-body" id="resultContent">
                 <!-- Result content -->
@@ -155,10 +220,15 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/javascript/javascript.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/python/python.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/clike/clike.min.js"></script>
+    <!-- Progress Indicator -->
+    <div class="progress-indicator" id="progressIndicator">
+        <div class="progress-bar"></div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/mode/python/python.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/mode/clike/clike.min.js"></script>
     <script src="js/problem.js"></script>
 </body>
 </html>
